proj1/tests/backup-test/correct/ast-binop.py
a::int = 3
b::int = 5

c::int = a + b
print c

c = a - b
print c

c = a * b
print c

c = a / b
print c

c = b % a
print c

c = b ** a
print c
