proj1/tests/backup-test/error/ast-binop-error.py
a = 3
c = a +
c = a -
c = a *
c = a /
c = a %
c = a **



